--- a/overlay-krypton/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-krypton/frameworks/base/core/res/res/values/config.xml
@@ -36,4 +36,7 @@
 
     <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
     <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/battery/fastchg_status</string>    
+
+    <!-- FPSInfoService Fps file path -->
+    <string name="config_fpsInfoSysNode" translatable="false">/sys/class/drm/sde-crtc-0/measured_fps</string>
 </resources>
